crates/frontend/samples/test1.out
error: failed to prove 0x14500b530: Tuple(0x14500b560: [0x145008a08: Tuple(0x145008a38: [0x145008f38: Tuple(0x145008f68: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x14600e950: [Equals(Ty(0x14600ea28: Tuple(0x14600ea58: [0x14600eb10: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:23:28
   │
23 │ impl<T: Associated<T: Demo<((), (((),),), ((),))>>> Dummy for T {}
   │                            ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x14500b530: Tuple(0x14500b560: [0x145008a08: Tuple(0x145008a38: [0x145008f38: Tuple(0x145008f68: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x14600e950: [Equals(Ty(0x14600ea28: Tuple(0x14600ea58: [0x14600eb10: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:25:11
   │
25 │ impl Demo<((), (((),),), ((),))> for () {}
   │           ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x14500b530: Tuple(0x14500b560: [0x145008a08: Tuple(0x145008a38: [0x145008f38: Tuple(0x145008f68: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x14600e950: [Equals(Ty(0x14600ea28: Tuple(0x14600ea58: [0x14600eb10: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:28:24
   │
28 │     type IHahThe: Demo<((), (((),),), ((),))>;
   │                        ^^^^^^^^^^^^^^^^^^^^^

error: failed to prove 0x14500b530: Tuple(0x14500b560: [0x145008a08: Tuple(0x145008a38: [0x145008f38: Tuple(0x145008f68: [])])]) implements TraitSpec { def: "Generic"#18, params: 0x14600e950: [Equals(Ty(0x14600ea28: Tuple(0x14600ea58: [0x14600eb10: InferVar(InferTyVar(6))])))] }
   ┌─ crates/frontend/samples/test1.fir:36:16
   │
36 │     type Woo = ((), (((),),), ((),));
   │                ^^^^^^^^^^^^^^^^^^^^^
